--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <label for="color-picker">Select Color:</label>
     <input type="color" id="color-picker" value="#000000" />
     <div class="container" id="grid-container"></div>
-    <button id="clear-button">Clear Board</button>
+    <button id="clear-button">Shake to Clear</button>
     <script src="main.js"></script>
   </body>
 </html>
